[package]
name = "lvm-common"
version = "0.1.0"
edition = "2024"
description = "Common types and utilities for the Lagertha VM project (JVM descriptors, signatures, types)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lagertha-rs/lvm-common"
homepage = "https://github.com/lagertha-rs"
authors = ["Obito-git"]
keywords = ["jvm", "java", "bytecode", "lagertha"]
categories = ["development-tools"]

[dependencies]
num_enum = "0.7.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
